goit-markup-hw-05
Додає текст з фоном в секції Чим ми займаємось

--- a/index.html
+++ b/index.html
@@ -97,12 +97,15 @@
         <ul class="worklist list">
           <li>
             <img src="./images/box1.jpg" width="370" alt="box1">
+            <p class="label">Десктопні додатки</p>
           </li>
           <li>
             <img src="./images/box2.jpg" width="370" alt="box2">
+            <p class="label">Мобільні додатки</p>
           </li>
           <li>
             <img src="./images/box3.jpg" width="370" alt="box3">
+            <p class="label">Дизайнерські рішення</p>
           </li>
         </ul></div>
       </section>
