--- a/portfolio.html
+++ b/portfolio.html
@@ -52,48 +52,57 @@
       <li><button type="button" class="button button-portfolio">Маркетинг</button></li>
   </ul>
   <ul class="portfolio-list list">
-        <li class="card"><a href="#" class="portfolio-link"><img class="portfolio-img"
+        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
           src="./images/technocrack.jpg" width="370" alt="веб-сайт Технокряк">
+          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
           <div class="border"><h2 class="portfolio-title">Технокряк</h2>
-        <p class="portfolio-text">Веб-сайт</p></div></a>
+        <p class="portfolio-text">Веб-сайт</p></a></div>
       </li>
-        <li class="card"><a href="#" class="portfolio-link"><img class="portfolio-img"
+        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
           src="./images/poster-neworlean.jpg" width="370" alt="дизайн Постера New Orlean">
+          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
           <div class="border"><h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
             <p class="portfolio-text">Дизайн</p></div></a>
         </li>
-        <li class="card"><a href="#" class="portfolio-link"><img  class="portfolio-img"
+        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img  class="portfolio-img"
           src="./images/rest-seafood.jpg" width="370" alt="додаток для Ресторану Seafood">
+          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
           <div class="border"><h2 class="portfolio-title">Ресторан Seafood</h2>
             <p class="portfolio-text">Додаток</p></div></a>
         </li>
-        <li class="card"><a href="#" class="portfolio-link"><img class="portfolio-img"
+        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
           src="./images/project-prime.jpg" width="370" alt="маркетингковий проєкт Prime">
+          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
             <div class="border"><h2 class="portfolio-title">Проєкт Prime</h2>
             <p class="portfolio-text">Маркетинг</p></div></a>
         </li>
-        <li class="card"><a href="#" class="portfolio-link"><img class="portfolio-img"
+        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
           src="./images/project-boxes.jpg" width="370" alt="додаток Проєкт Boxes">
+          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
           <div class="border"><h2 class="portfolio-title">Проєкт Boxes</h2>
             <p class="portfolio-text">Додаток</p></div></a>
         </li>
-        <li class="card"><a href="#" class="portfolio-link"><img class="portfolio-img"
+        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
           src="./images/web-ispiration.jpg" width="370" alt="веб-сайт Inspiration has no Borders">
+          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
           <div class="border"><h2 class="portfolio-title">Inspiration has no Borders</h2>
             <p class="portfolio-text">Веб-сайт</p></div></a>
         </li>
-        <li class="card"><a href="#" class="portfolio-link"><img class="portfolio-img"
+        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
           src="./images/design-limedit.jpg" width="370" alt="Видання Limited Edition">
+          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
           <div class="border"><h2 class="portfolio-title">Видання Limited Edition</h2>
             <p class="portfolio-text">Дизайн</p></div></a>
         </li>
-        <li class="card"><a href="#" class="portfolio-link"><img class="portfolio-img"
+        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
           src="./images/project-lab.jpg" width="370" alt="маркетинговий проєкт LAB">
+          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
           <div class="border"><h2 class="portfolio-title">Проєкт LAB</h2>
             <p class="portfolio-text">Маркетинг</p></div></a>
         </li>
-        <li class="card"><a href="#" class="portfolio-link"><img class="portfolio-img"
+        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
           src="./images/app-growbussiness.jpg" width="370" alt="додаток Growing Business">
+          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
           <div class="border"><h2 class="portfolio-title">Growing Business</h2>
             <p class="portfolio-text">Додаток</p></div></a>
         </li>
