goit-markup-hw-05
Додає кнопку закриття на модалне вікно

--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
     <button data-modal-open>Відкрити модалку</button>
     
     <div class="backdrop is-hidden" data-modal>
-      <div class="modal"><svg data-modal-close class="close-button"class="icon-close-1" width="30" height="30">
-        <use href="./images/icons.svg#icon-close-button"></use>
-        </svg></button></div>
+      <div class="modal"><button data-modal-close class="close-button"><svg width="11" height="11">
+        <use href="./images/icons.svg#icon-close-button"></use></button>
+        </svg></div>
     </div>
 
     <script src="./js/modal.js"></script>
