--- a/index.html
+++ b/index.html
@@ -271,15 +271,13 @@
           </svg></a></li>
       </ul></div></div></div>
     </footer>
-
-    <button data-modal-open>Відкрити модалку</button>
-    
+<!--Модальне вікно-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal"><button data-modal-close class="close-button"><svg width="11" height="11">
         <use href="./images/icons.svg#icon-close-button"></use></button>
         </svg></div>
     </div>
-
+<!--Скріпти-->
     <script src="./js/modal.js"></script>
   </body>
 </html>
