goit-markup-hw-05
Виправив помилки

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
       <section class="hero background">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button data-modal-open type="button" class="button button-hero data-modal-open">Замовити послугу</button>
-        
       </section>
       <!--Cекція Особливості-->
       <section class="section">
@@ -97,15 +96,15 @@
         <div class="container"><h2 class="worklist-title">Чим ми займаємося</h2>
         <ul class="worklist list">
           <li>
-            <img src="./images/box1.jpg" width="370" alt="box1">
+            <img class="worklist-img" src="./images/box1.jpg" width="370" alt="box1">
             <p class="label">Десктопні додатки</p>
           </li>
           <li>
-            <img src="./images/box2.jpg" width="370" alt="box2">
+            <img class="worklist-img" src="./images/box2.jpg" width="370" alt="box2">
             <p class="label">Мобільні додатки</p>
           </li>
           <li>
-            <img src="./images/box3.jpg" width="370" alt="box3">
+            <img class="worklist-img" src="./images/box3.jpg" width="370" alt="box3">
             <p class="label">Дизайнерські рішення</p>
           </li>
         </ul></div>
